--- a/MapsIndoorsSamples/app/src/main/res/values/strings.xml
+++ b/MapsIndoorsSamples/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="menu_slideshow">Slideshow</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
